# capstone-project-team-7

./: .env  .env.example  .gitignore  PRESENTATION_READY.md  PRE_PRESENTATION_CHECKLIST.md  README.md  SKILLS_PROGRESS_PLAN.md  package-lock.json  package.json  pr-api-security.md  pr-generate-resume-from-profile.md  pr-job-match-backend.md  pr-job-match-frontend.md  pr-resume-editor-perf.md  pr-resume-profile-crud.md  review-508.md  skill_summary_input.json  skill_summary_raw.txt  textual-ui.stderr
backend/: Dockerfile  requirements.txt  scan_result.json  setup.cfg  test_skills_integration.py
backend/capstone_backend/: __init__.py  cli_runner.py
backend/capstone_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/src/: main.py
backend/src/analyzer/: README.md  __init__.py  file_filters.py  llm_media_helper.py  llm_remote_media_analyzer.py  project_classifier.py  project_detector.py  resource_map.py  skill_gap_analyzer.py  skills_extractor.py
backend/src/api/: README.md  __init__.py  analysis_routes.py  auth_routes.py  dependencies.py  encryption_routes.py  job_match_routes.py  job_routes.py  linkedin_routes.py  llm_routes.py  portfolio_routes.py  portfolio_settings_routes.py  profile_routes.py  project_routes.py  request_context.py  resume_routes.py  security.py  selection_routes.py  settings_routes.py  spec_routes.py  upload_routes.py  user_resume_routes.py
backend/src/auth/: README.md  (+3 more)
backend/tests/: test_encryption_status.py  test_portfolio_refresh.py  test_portfolio_routes.py  test_profile_routes.py  test_settings_routes.py
(+608 files in other folders)
