[metadata]
name = capstone-backend
version = 0.1.0
description = Backend services and CLI helpers for the capstone project.

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.9
include_package_data = True
install_requires =
    fastapi
    uvicorn
    supabase==2.0.0
    python-dotenv==1.0.0
    pydantic
    httpx==0.24.0
    openai==1.12.0

[options.packages.find]
where = .
include =
    capstone_backend
    capstone_backend.*
    src
    src.*

[options.entry_points]
console_scripts =
    parse = capstone_backend.cli_runner:main
